# url-shortener

./: .gitignore  README.md  docker-compose.yml
nginx/: Dockerfile  nginx.conf
url-shortener/: .dockerignore  Dockerfile  alembic.ini  entrypoint.sh  lint.sh  pyproject.toml  supervisor.conf  wsgi.py
url-shortener/app/: app.py  decorators.py  fields.py  forms.py  models.py  views.py
url-shortener/app/core/: app.py  auth.py  csrf.py  db.py  decorators.py  forms.py  locals.py  utils.py  wrappers.py
url-shortener/app/static/: time-widget.js
url-shortener/app/templates/: _macros.html  base.html  index.html
url-shortener/app/templates/accounts/: deactivate.html  login.html  profile.html  register.html
url-shortener/app/templates/exceptions/: 404.html  405.html
url-shortener/app/templates/short-urls/: create.html  delete.html  list.html
url-shortener/migrations/: env.py
url-shortener/migrations/versions/: 5f92514b99f6_.py  b5c90ac69982_.py
